Correction Collapse v2

--- a/src/styles/accommodation.css
+++ b/src/styles/accommodation.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 
 
+/* CSS Description */
+
 .accommodationDescription {
     display: flex;
     justify-content: space-between;
@@ -11,10 +13,12 @@
 
 .accommodationDescription h1 {
     font-weight: 500;
+    margin-bottom: 0;
 }
 
 .accommodationDescription h2 {
     font-weight: 500;
+    margin-top: 10px;
 }
 
 .accommodationRight {
@@ -27,15 +31,27 @@
     display: flex;
 }
 
+/* CSS Tag */
+
 .accommodationTag {
     display: flex;
+    margin-bottom: 15px;
 }
 
-.accommodationCollapse {
-    display: flex;
-    justify-content: space-between;
-    margin: 0% 6% 0% 6%;
+.accommodationTag p {
+    background: #FF6060;
+    color: white;
+    border-radius: 40px;
+    padding: 5px 25px;
+    margin-right: 15px;
+}
 
+/* CSS Collapse */
+
+.accommodationCollapse {
+    display: grid;
+    justify-items: center;
+    grid-template-columns: repeat(2, 1fr);
 }
 
 .collapseItem1 {
@@ -50,57 +66,4 @@
     max-width: 800px;
     min-width: 300px;
     margin-left: 10px;
-}
-
-
-.collapseTitle {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #FF6060;
-    height: 70px;
-    color: white;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 25px;
-    padding: 0 1%;
-    margin: 0;
-    border-radius: 5px;
-}
-
-.collapseText {
-    background-color: #F7F7F7;
-    margin: 0;
-    padding-top: 10px;
-    height: 100%;
-    width: 100%;
-    max-width: 800px;
-    min-width: 300px;
-    border-radius: 0 0px 5px 5px;
-}
-
-.collapseArrow {
-    height: 25%;
-}
-
-.collapseText p {
-    color: #FF6060;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 25px;
-    width: 90%;
-    padding: 0 0 20px 25px;
-    line-height: 40px;
-}
-
-.collapseText li {
-    list-style: none;
-    color: #FF6060;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 25px;
-    width: 90%;
-    padding: 0 0 20px 25px;
-    line-height: 20px;
-}
-
-.collapseText li:first-child {
-margin-top: 30px;
 }
