--- a/src/styles/collapse.css
+++ b/src/styles/collapse.css
@@ -1,6 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 
 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+
+
+.collapse {
+    
+}
+
 .collapseTitle {
     display: flex;
     justify-content: space-between;
@@ -16,12 +23,28 @@
 }
 
 .collapseText {
+    position: relative;
     background-color: #F7F7F7;
-    margin: 0% 15% 0% 15%;
+    margin: -10px 15% 0% 15%;
+    z-index: -1;
     padding-top: 10px;
     height: 100%;
     border-radius: 0 0px 5px 5px;
 }
+
+.collapseText li {
+        list-style: none;
+        color: #FF6060;
+        font-family: 'Montserrat', sans-serif;
+        font-size: 25px;
+        width: 90%;
+        padding: 0 0 20px 25px;
+        line-height: 20px;
+}
+    
+    .collapseText li:first-child {
+    margin-top: 30px;
+    }
 
 .collapseArrow {
     height: 25%;
@@ -34,4 +57,5 @@
     width: 90%;
     padding: 0 0 20px 25px;
     line-height: 40px;
+
 }
